; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb4/extr_smt.c_find_or_alloc_smte.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb4/extr_smt.c_find_or_alloc_smte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smt_entry = type { i64, i64, i32 }
%struct.smt_data = type { i64, %struct.smt_entry* }

@SMT_STATE_SWITCHING = common dso_local global i64 0, align 8
@ETH_ALEN = common dso_local global i32 0, align 4
@SMT_STATE_UNUSED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.smt_entry* (%struct.smt_data*, i32*)* @find_or_alloc_smte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.smt_entry* @find_or_alloc_smte(%struct.smt_data* %0, i32* %1) #0 {
  %3 = alloca %struct.smt_entry*, align 8
  %4 = alloca %struct.smt_data*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.smt_entry*, align 8
  %7 = alloca %struct.smt_entry*, align 8
  %8 = alloca %struct.smt_entry*, align 8
  store %struct.smt_data* %0, %struct.smt_data** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.smt_entry* null, %struct.smt_entry** %6, align 8
  %9 = load %struct.smt_data*, %struct.smt_data** %4, align 8
  %10 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %9, i32 0, i32 1
  %11 = load %struct.smt_entry*, %struct.smt_entry** %10, align 8
  %12 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %11, i64 0
  store %struct.smt_entry* %12, %struct.smt_entry** %7, align 8
  %13 = load %struct.smt_data*, %struct.smt_data** %4, align 8
  %14 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %13, i32 0, i32 1
  %15 = load %struct.smt_entry*, %struct.smt_entry** %14, align 8
  %16 = load %struct.smt_data*, %struct.smt_data** %4, align 8
  %17 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %15, i64 %18
  store %struct.smt_entry* %19, %struct.smt_entry** %8, align 8
  br label %20

20:                                               ; preds = %53, %2
  %21 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %22 = load %struct.smt_entry*, %struct.smt_entry** %8, align 8
  %23 = icmp ne %struct.smt_entry* %21, %22
  br i1 %23, label %24, label %56

24:                                               ; preds = %20
  %25 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %26 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %24
  %30 = load %struct.smt_entry*, %struct.smt_entry** %6, align 8
  %31 = icmp ne %struct.smt_entry* %30, null
  br i1 %31, label %34, label %32

32:                                               ; preds = %29
  %33 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  store %struct.smt_entry* %33, %struct.smt_entry** %6, align 8
  br label %34

34:                                               ; preds = %32, %29
  br label %52

35:                                               ; preds = %24
  %36 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %37 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @SMT_STATE_SWITCHING, align 8
  %40 = icmp eq i64 %38, %39
  br i1 %40, label %41, label %51

41:                                               ; preds = %35
  %42 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %43 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = load i32*, i32** %5, align 8
  %46 = load i32, i32* @ETH_ALEN, align 4
  %47 = call i64 @memcmp(i32 %44, i32* %45, i32 %46)
  %48 = icmp eq i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %41
  br label %66

50:                                               ; preds = %41
  br label %51

51:                                               ; preds = %50, %35
  br label %52

52:                                               ; preds = %51, %34
  br label %53

53:                                               ; preds = %52
  %54 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %55 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %54, i32 1
  store %struct.smt_entry* %55, %struct.smt_entry** %7, align 8
  br label %20

56:                                               ; preds = %20
  %57 = load %struct.smt_entry*, %struct.smt_entry** %6, align 8
  %58 = icmp ne %struct.smt_entry* %57, null
  br i1 %58, label %59, label %61

59:                                               ; preds = %56
  %60 = load %struct.smt_entry*, %struct.smt_entry** %6, align 8
  store %struct.smt_entry* %60, %struct.smt_entry** %7, align 8
  br label %62

61:                                               ; preds = %56
  store %struct.smt_entry* null, %struct.smt_entry** %3, align 8
  br label %68

62:                                               ; preds = %59
  %63 = load i64, i64* @SMT_STATE_UNUSED, align 8
  %64 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  %65 = getelementptr inbounds %struct.smt_entry, %struct.smt_entry* %64, i32 0, i32 1
  store i64 %63, i64* %65, align 8
  br label %66

66:                                               ; preds = %62, %49
  %67 = load %struct.smt_entry*, %struct.smt_entry** %7, align 8
  store %struct.smt_entry* %67, %struct.smt_entry** %3, align 8
  br label %68

68:                                               ; preds = %66, %61
  %69 = load %struct.smt_entry*, %struct.smt_entry** %3, align 8
  ret %struct.smt_entry* %69
}

declare dso_local i64 @memcmp(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
